--- a/src/app/tipoalimentos/tipoalimentos.component.html
+++ b/src/app/tipoalimentos/tipoalimentos.component.html
@@ -5,101 +5,257 @@
 <div class="main-content">
   <div class="container-fluid">
 
-
-    <div class="row">
-      <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
-        data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
-
-      <div class="col-md-12">
-
-        <div class="card">
-          <div class="card-header card-header-danger">
-            <h4 class="card-title disabled"> <img src="/assets/img/tipoalimentos.png" class="edit" alt=""> Tipos
-              Alimentos</h4>
-
+    <div class="form-row">
+      <div class="form-group containerversion2 col-md-12">
+        <div class="labelversion2">
+          <label for="filtroSelector">Filtrar por:</label>
+        </div>
+    
+        <div class="mr-4 text-center">
+          <div class="form-check">
+            <input
+              type="radio"
+              id="filtroNombre"
+              class="form-check-input"
+              name="filtro"
+              [(ngModel)]="filtroSeleccionado"
+              [value]="'nombre'"
+              (change)="aplicarFiltros()"
+            />
+            <label for="filtroNombre" class="form-check-label">Nombre</label>
           </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table">
-                <thead class=" text-primary">
-                  <th>
-                    ID
-                  </th>
-
-                  <th>
-                    Descripción
-                  </th>
-
-                  <th>
-                    Acción
-                  </th>
-
-                </thead>
-                <tbody *ngFor="let item of tipoalimentosss ;let i=index ">
-                  <tr>
-                    <td>
-                      {{i+1}}
-                    </td>
-
-                    <td>
-                      {{item.tipo}}
-                    </td>
-
-                    <td>
-                      <button1 color="primary" (click)="editartipoAlimento(item)">
-                        <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
-                      </button1>
-
-
-                      <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
-                      </button2>
-                    </td>
-
-                  </tr>
-
-                </tbody>
-              </table>
-
-
-
+          <i class="material-icons mt-2 cursor" (click)="filtroSeleccionado = 'nombre'">{{ filtroSeleccionado === 'nombre' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
+        </div>
+    
+        <div class="text-center">
+          <div class="form-check">
+            <input
+              type="radio"
+              id="filtroFecha"
+              class="form-check-input"
+              name="filtro"
+              [(ngModel)]="filtroSeleccionado"
+              [value]="'fecha'"
+              (change)="aplicarFiltros()"
+            />
+            <label for="filtroFecha" class="form-check-label">Fecha</label>
+          </div>
+          <i class="material-icons mt-2 cursor" (click)="filtroSeleccionado = 'fecha'">{{ filtroSeleccionado === 'fecha' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
+        </div>
+        
+        <!-- Campo de filtro de Nombre -->
+        <div *ngIf="filtroSeleccionado === 'nombre'">
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <div class="formmme">
+                <div class="search-containerr">
+                  <label class="label" for="nombreFiltro">Buscar el nombre del menú :</label>
+                  <div class="search-box">
+                    <input type="text" class="form-control" [(ngModel)]="nombreplatoFiltro" (input)="aplicarFiltros()" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    
+        <!-- Campo de filtro de Fecha -->
+        <div *ngIf="filtroSeleccionado === 'fecha'">
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <div class="formmm3">
+                <div class="search-containerr">
+                  <label class="label" for="fechaFiltro">Buscar la fecha:</label>
+                  <div class="search-box">
+                    <input type="date" class="form-control" [(ngModel)]="fechaFiltro" (input)="aplicarFiltrosfecha()" />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
+
+
+
+
+    
+    </div>
+
+
+    <br>
+
+
+
+  
+
+    <div class="row">
+    
+  
+      <div class="col-md-12">
+    
+        <div class="card text-center">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title disabled"> <img src="/assets/img/mn.png" class="edit" alt=""> Menú diario</h4>
+          </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table">
+                <thead class=" text-primary">
+                <th>
+                  N°
+                </th>
+                <th>
+                  Fecha
+                </th>
+                <th>
+                    Menús
+                </th>
+                <th>
+                  Cantidades de menús
+                </th>
+                <th>
+                  Ver en la web
+                </th>
+                <th>
+                  Acciones
+                </th>
+                </thead>
+                <tbody>
+                  <ng-container *ngFor="let item of pagedMenus; let i = index">
+                    <ng-container *ngIf="(!nombreplatoFiltro || item.plato.descripcion.toLowerCase().includes(nombreplatoFiltro.toLowerCase()))||(!fechaFiltro || item.fecha.toLowerCase().includes(fechaFiltro.toLowerCase()))">
+  
+                <tr>
+                  <td>
+                    {{ i + 1 }}
+                  </td>
+                  <td>
+                    {{ item.fecha }}
+                  </td>
+                  <td>
+                    {{ item.plato.descripcion }}
+                  </td>
+                  <td>
+                    {{ item.cantidad }}
+                  </td>
+                  <td>
+                    {{ item.habilitado ? 'Sí' : 'No' }}
+                  </td>
+                  <td>
+                    <button1 color="primary" (click)="editarMenu(item)">
+                      <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
+                    </button1>
+                    <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
+                    </button2>
+                  </td>
+                </tr>
+              </ng-container>
+            </ng-container>
+                </tbody>
+              </table> 
+            </div>
+
+
+            <div *ngIf="!pagedMenus || pagedMenus.length === 0" class="text-center">
+              <img src="/assets/img/almuerzo.png" class="edit" alt="" />
+            </div>
+    
+          <!-- Contenedor para centrar la paginación -->
+<div class="pagination-containerrrr">
+  <!-- Paginación -->
+  <div class="pagination">
+    <button (click)="onPageChange(currentPage - 1)" [disabled]="currentPage === 1"><i  class="fa fa-arrow-left  "></i> Anterior</button>
+    <span class="k">Página {{ currentPage }} de {{ totalPages }}</span>
+    <button (click)="onPageChange(currentPage + 1)" [disabled]="currentPage === totalPages">Siguiente <i  class="fa fa-arrow-right"></i></button>
+  </div>
+</div>
+
+          </div>
+        </div>
+    
+      </div>
     </div>
   </div>
 </div>
 
-<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
-  aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content d-flex align-items-center">
-      <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png"
-            alt=""></h5>
+
+
+
+<div class="modal fade tam1 my-custom-modal" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document" style="position: fixed; top: 45%; left: 50%; transform: translate(-50%, -50%); display: flex; flex-direction: column; justify-content: center; align-items: center;">
+
+    <div class="modal-content tam">
+      <div class="heads x tam1 ">
+        <h5 class="modal-title texto-grueso " id="exampleModalLabel">
+          {{ tituloForm }} <img src="assets/img/comida.png" alt="" />
+        </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        <form [formGroup]="TipoalimentoForm">
 
-
-          <div class="form-row">
+      <div class="modal-body modal-with-padding">
+        <form [formGroup]="menuForm">
+          <div class="form-row">     
             <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr">Tipo</label> <br>
-              <input class="example-full-width estilos" type="text" formControlName="tipo">
-              <div *ngIf="showTipoError" class="text-danger">Campo requerido</div>
+              <div class="formmm">
+                <div class="search-container">
+                  <label class="label" >Buscar el nombre del menú:</label>
+                  <div class="search-box">
+                    <input type="text" class="form-control" list="list-timezone-plato"
+                      [value]="platoSeleccionado.descripcion" (input)="updatePlatoId($event)" formControlName="id_plato" disabled/>
+                    <datalist id="list-timezone-plato">
+                      <option *ngFor="let item of listaPlatos" [value]="item.descripcion"></option>
+                    </datalist>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-
-
-          <input type="hidden" formControlName="funcion">
+          <br>
+          <div class="form-row justify-content-center">
+            <div class="form-group col-md-4 mx-auto">
+              <label for="inputState" class="select-gr">Cantidades de menús</label>
+              <br />
+              <input class="example-full-width estilosversion2" type="number" formControlName="cantidad" disabled/>
+              <div *ngIf="showId_cantidadplatoError" class="text-danger">Campo requerido</div>
+            </div>
+        
+            <div class="form-group col-md-4 mx-auto">
+              <label for="inputState" class="select-gr">Fecha</label>
+              <br />
+              <input class="example-full-width estilosversion2" type="date" formControlName="fecha" disabled>
+              <div *ngIf="showFechaError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+          <br>
+          <div class="centered-horizontal ">
+            <div class="form-row ">
+              <div class="form-group col-md-12">
+                <label for="inputState" class="select-gr">Ver en la web</label> <br>
+                <!-- Elimina el input anterior y utiliza radio buttons -->
+                <input type="radio" id="si" name="habilitado" formControlName="habilitado" value="1" [checked]="menuForm.value.habilitado === '1'">
+                <label for="si">Si</label>
+                <br>
+                <input type="radio" id="no" name="habilitado" formControlName="habilitado" value="0" [checked]="menuForm.value.habilitado === '0'">
+                <label for="no">No</label>
+                <div *ngIf="showHabilitadoError" class="text-danger">Campo requerido</div>
+              </div>
+            </div>
+          </div>
+          <input type="hidden" formControlName="funcion" />
         </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
-        <button type="button" class="btn btn-danger" (click)="addtipoAlimento()" data-dismiss="modal">Guardar</button>
+
+      <div class="modal-footer justify-content-center">
+        <button type="button" class="btn" data-dismiss="modal" (click)="closeModal()">
+          Cerrar
+        </button>
+        <button type="button" class="btn btn-danger" (click)="addMenu()" data-dismiss="modal">
+          {{ editandoPlato ? 'Modificar' : 'Registrar' }}
+        </button>
       </div>
     </div>
   </div>
 </div>
+
+ 
